<resources>
    <string name="app_name">Talkzy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="title_chats">Chats</string>
    <string name="title_meet">Meet</string>
    <string name="title_profile">Profile</string>

</resources>