<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.app.talkzy.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.app.talkzy.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_notif"
        android:name="com.app.talkzy.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_meets"
        android:name="com.app.talkzy.ui.meets.MeetsFragment"
        android:label="@string/title_meet"
        tools:layout="@layout/fragment_meets" />
    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.app.talkzy.ui.chats.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_stories_chats" />

</navigation>